--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.exclude": {
-    "front-bate-papo-uol-main": true,
+    "front-bate-papo-uol": true,
     "node_modules": true
   }
 }
